<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".create.AddReminderActivity">

    <EditText
        android:id="@+id/add_reminder_et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_title"/>

    <EditText
        android:id="@+id/add_reminder_et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminer_description"/>

    <Button
        android:id="@+id/add_reminder_button_add_location_trigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_add_location_trigger"/>

    <LinearLayout
        android:id="@+id/add_reminder_group_time_trigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/add_reminder_text_time_trigger"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/add_reminder_button_time_trigger_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/delete"/>
    </LinearLayout>

    <Button
        android:id="@+id/add_reminder_button_add_time_trigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_add_time_trigger"/>

    <Button
        android:id="@+id/add_reminder_button_add_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/finish"/>

</LinearLayout>
